--- a/C#4_Lab01/appsettings.json
+++ b/C#4_Lab01/appsettings.json
@@ -5,5 +5,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "book": [
+    {
+      "id": "444",
+      "language": "C#",
+      "edition": "First",
+      "author": "Dennis Ritchie"
+    },  
+    {
+      "id": "555",
+      "language": "C++",
+      "edition": "second",
+      "author": "Bjarne Stroustrup"
+    }
+  ]
 }
